--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This project is aimed to provide a simple framework for tcpreplay.
+a simple and cute tcp traffic replaying tool.
+written by kamuszhou@tencent.com AKA 16236914@qq.com
+visit to my blog site www.dogeye.net is warmly welcomed.
